--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -1,15 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Karla:400,700|Lato:400,400i,700");
 @import url("//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css");
 body {
-  font-family: 'Lato', 'Arial', sans-serif; }
+  font-family: 'Lato', 'Arial', sans-serif;
+  background-color: #eee; }
 
 h3 {
   margin: 0; }
 
 #container {
   width: 1080px;
-  margin: auto;
-  text-align: center; }
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 3px;
+  border: 1px solid #595959;
+  box-shadow: 0px 0px 2px #595959;
+  text-align: center;
+  background-color: #fff; }
 
 #title, #legend-title {
   font-family: 'Karla', 'Georgia', sans-serif;
